Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29797

Some scene graph headers do not have the module directory prepended to their include paths

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.1.0
    • 5.0.1
    • Quick: SceneGraph
    • None
    • Mac OSX
    • ccba80ee3e7c13844a769e5cd2213f34842c674b

    Description

      Specifically:

      src/quick/scenegraph/coreapi/qsggeometry.h
      src/quick/scenegraph/util/qsgflatcolormaterial.h
      src/quick/scenegraph/util/qsgtexture.h
      

      This causes problems for framework installs on OSX (at least with cmake), as they don't have the headers available bare.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sletta Gunnar Sletta
            jfaust Josh Faust
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes