Fix headers without Qt module directory name in their includes

Fixed headers to include the Qt module directory in their #include
directives, e.g. <QtCore/QObject> instead of <QObject>.

QTBUG-29797

Change-Id: I6f61973deb4e48158d3eff896afd81ca4b8ae960
Reviewed-by: Gunnar Sletta <gunnar.sletta@digia.com>